<resources>
    <string name="app_name">Project 0 -Note App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_delete"><font color='#FF0000'>Delete</font></string>
    <string name="str_cancel">Cancel</string>
    <string name="str_add_noti">Add Reminder</string>
    <string name="str_done">Done</string>
    <string name="reminder_time">Reminder Time:</string>
    <string name="repeat_options">Repeat Options:</string>
    <string name="reminder_content_optional">Reminder Content (optional):</string>
    <string name="content">Content</string>
    <string name="content2">Content:</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="move">Move</string>
    <string name="choose">Choose</string>
    <string name="title_note">Title</string>
    <string name="description_note">Description</string>
    <string name="tag">Tags</string>
    <string name="folder">Folders</string>
    <string name="modify">Modify</string>
    <string name="reminder">Reminders</string>
    <string name="coming_reminder">Coming Reminders</string>
    <string name="unread_reminder">Unread Reminders</string>
    <string name="setting">Setting</string>
    <string name="theme">Theme</string>
    <string name="system_font">System Font</string>
    <string name="language">Language</string>
    <string name="markdown_mode">Markdown Mode</string>
    <string name="trash">Trash</string>
    <string name="add_folder">Add Folder</string>
    <string name="rename_folder">Rename Folder</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="enter_folder_name">Enter Folder Name</string>
    <string name="please_enter_folder_name">Please Enter Folder Name</string>
    <string name="folder_name_is_so_long">Folder Name is so long</string>
    <string name="folder_name_is_existed">Folder Name is existed</string>
    <string name="create">Create</string>
    <string name="restore">Restore</string>
    <string name="restore_all">Restore All</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="choose_a_note">Choose a note</string>
    <string name="choose_a_folder">Choose a folder</string>
    <string name="reminder_at">Reminder - at </string>
    <string name="alternative_name">Alternative Name</string>
    <string name="repeat_none">None</string>
    <string name="repeat_daily">Daily</string>
    <string name="repeat_weekly">Weekly</string>
    <string name="repeat_biweekly">Every 2 Weeks</string>
    <string name="repeat_monthly">Monthly</string>
    <string name="repeat_yearly">Yearly</string>
    <string name="notes">Notes</string>
    <string name="calendar">Calendar</string>
    <string name="share">Share</string>
    <string name="add_file">Add File</string>
    <string name="link_note">Link Note</string>
    <string name="rename">Rename</string>
    <string name="search_in_note">Search in Note</string>
    <string name="move_note">Move Note</string>
    <string name="list_mode">List Mode</string>
    <string name="collection_mode">Collection Mode</string>
    <string name="sort_by_modified_date">Sort by Modified Date</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="select_notes">Select Notes</string>
    <string name="modify_reminder">Modify Reminder</string>
    <string name="format">day %02d month %02d, %d</string>
    <string name="all_notes">All Notes</string>
    <string name="one_note">One Note</string>
    <string name="auto">Auto</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="share_by">Share By</string>
    <string name="no_title">No Title</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="content_reminder">Content Reminder</string>
    <string name="repeat">Repeat</string>
    <string name="you_want">You want to</string>
    <string name="hop_mode">Hop Mode</string>
    <string name="time_mode">Time Mode</string>

</resources>