<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_rename_folder"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:background="@drawable/bg_addfolder">

    <TextView
        android:id="@+id/allOption"
        android:text="@string/delete_all"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <View
        android:background="@color/light"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/txtCancel"
            android:layout_weight="0.5"
            android:text="@string/str_cancel"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <View
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/light"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/txtConfirm"
            android:layout_weight="0.5"
            android:text="@string/str_done"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>