<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ListNoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="?attr/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/backLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/ic_back"
                app:tint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folder"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtDone"
            android:layout_marginEnd="20dp"
            android:text="Xong"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/backLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/menu_list_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_btn"
            android:padding="2dp"
            android:src="@drawable/ic_menu"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/backLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backLayout"
            app:tint="@color/lightGray" />

        <TextView
            android:id="@+id/name_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="Tên thư mục"
            android:textColor="?attr/colorTitle"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backLayout" />

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_search"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:padding="4dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_folder">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_search"
                app:tint="?attr/colorComponentSearch" />

            <TextView
                android:text="@string/search"
                android:textColor="?attr/colorComponentSearch"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="26dp"/>

            <ImageView
                android:id="@+id/clearBtn"
                android:src="@drawable/ic_clear"
                android:layout_marginEnd="2dp"
                android:padding="2dp"
                android:background="@drawable/bg_delete_search"
                android:visibility="gone"
                android:layout_width="18dp"
                android:layout_height="18dp"
                app:tint="@color/lightGray" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewListNote"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchLayout" />

        <ImageView
            android:id="@+id/createNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_newnote"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_round_btn"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/lightGray" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutModify"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/colorCardView5"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txtDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/delete"
                android:textColor="@color/red"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/move"
                android:textColor="@color/blue"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/dimViewMove"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.1"
        android:visibility="gone" />

    <include layout="@layout/layout_move_note"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>